tests/idris2/error/error005/IfErr.idr
data Wibble = Wobble

foo : a -> a -> Bool
foo x y = x == y

bar : Wibble -> Wibble -> Bool
bar x y = x == y
